# DX12MiniRenderer

./: .gitmodules  CMakeLists.txt  MiniRendererApp.cpp  MiniRendererApp.h  README.md  main.cpp  notes.txt
Assets/SampleScene/GLTFs/Avocado/: Avocado.yaml
Assets/SampleScene/GLTFs/CornellBox/: CornellBox.yaml
Assets/SampleScene/GLTFs/CornellBoxMultiMaterials/: CornellboxMultiMaterial.yaml  isoSphereHighFaceNum.gltf
Assets/SampleScene/GLTFs/DXRMilestoneScene/: DXRMilestone.yaml  data.yaml  quickSceneEdit.py  tallBox.gltf
Assets/SampleScene/GLTFs/Duck/: Duck.yaml
Assets/SampleScene/GLTFs/Fish/: Fish.yaml
Assets/SampleScene/GLTFs/PBRSpheresPtLights/: PBRSpherePtLights.yaml
Assets/SampleScene/GLTFs/Sphere/: SphereTest.yaml
Assets/SampleScene/GLTFs/TexturedCube/: TexturedCube.yaml
Assets/SampleScene/GLTFs/Triangle/: TriangleTest.yaml
DX12Playground/: notes.txt
EventSystem/: CMakeLists.txt  EventManager.cpp  EventManager.h
RenderBackend/: CMakeLists.txt  ForwardRenderBackend.cpp  ForwardRenderBackend.h  HWRTRenderBackend.cpp  HWRTRenderBackend.h  RendererBackend.cpp  RendererBackend.h
RenderBackend/ForwardRendererShaders/: PBRShaders.hlsl  shaders.hlsl
RenderBackend/RTShaders/: CMakeLists.txt  CustomRTShader.fxh  CustomRTShader.hlsl  DXCShaderCompile.bat  Raytracing.hlsl.h  RaytracingShader.h  shader.fxh
SampleScene/GLTFs/Triangle/: TriangleTest.yaml
Scene/: CMakeLists.txt  Camera.cpp  Camera.h  Level.cpp  Level.h  Lights.cpp  Lights.h  Mesh.cpp  Mesh.h  Object.h  SceneAssetLoader.cpp  SceneAssetLoader.h  SceneLoader.cpp  SceneLoader.h
TimePerfManager/: CMakeLists.txt  TimePerfManager.cpp  TimePerfManager.h
UI/: CMakeLists.txt  InputHandler.cpp  InputHandler.h  UIManager.cpp  UIManager.h
Utils/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  DX12Utils.cpp  DX12Utils.h  GltfUtils.cpp  GltfUtils.h  MathUtils.cpp  MathUtils.h  StrPathUtils.cpp  StrPathUtils.h  crc32.h
